--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             </span>
         </div>
     </div>
+    <div align=center><a href='https://www.counter12.com'><img
+                src='https://www.counter12.com/img-51b9ZYaZZ2Zwcz0c-7.gif' border='0' alt='counter'></a>
+        <script type='text/javascript' src='https://www.counter12.com/ad.js?id=51b9ZYaZZ2Zwcz0c'></script>
+    </div>
 </body>
 
 </html>
